no se ni que tocar

--- a/src/componentes/style.css
+++ b/src/componentes/style.css
@@ -132,7 +132,7 @@ body {
  .redes {
      
      display: flex;
-     justify-content: end;
+     justify-content: flex-end;
      margin-right: 10%; 
      color: white;
      
