--- a/src/componentes/style.css
+++ b/src/componentes/style.css
@@ -1,3 +1,4 @@
+
 body {
     background:linear-gradient(to left,black,rgb(6, 0, 70),black);
     height: 100%;
@@ -10,29 +11,36 @@ body {
      color: white;
      position: fixed;
      width: 100%;
-     height:5vh;
      list-style: none;
-     display: flex;
      background-color: rgba(8, 8, 8, 0.7);
      margin: 0px;
-     padding: 0px;
+     padding: 1vh;
      top: 0;
      align-items: center;
      z-index: 5;
  
+ 
  }
  
- .navbar li {
-     width: 25%;
+ .listContainer {
+     width: 90%;
+     height: 100%;
      font-size: 1.4rem;
      font-weight: 600;
      font-style: italic;
-     margin: 0px;
-     padding: 0px;
-     text-align: center;
+     display: flex;
+    list-style: none;
+     justify-content: space-between;
+     margin: auto;
+     align-items: center;
+  
+ 
+
+
+   
  }
  
- 
+
  .navbar a {
      color:white;
      text-decoration: none;
@@ -40,13 +48,86 @@ body {
  .navbar a:hover::before{
      content: '<';
      text-decoration: none;
+     
  }
  .navbar a:hover::after{
-     content:'/>'
+     content:'/>';
+     position: absolute;
  }
  
  
+ /*MenuHamburguer*/
  
+
+
+
+ .cruz{
+  
+    padding: 0;
+    display: flex;
+    flex-direction: column;
+    cursor: pointer;
+
+    z-index: 6;
+    position: absolute;
+    left: 0;
+    top: 0vh;
+
+
+    width: 25px;
+    height: 25px;
+    
+   
+
+   
+ 
+
+    
+ }
+ .cruz span {
+    transform-origin: 0px 0px ;
+    transition: transform 0.5s cubic-bezier(0.77,0.2,0.05,1.0),
+    background 0.5s cubic-bezier(0.77,0.2,0.05,1.0),
+    opacity 0.55s ease;
+
+ 
+    
+
+ }
+ .cruz span:first-child{
+    color: white;
+    background-color: white;
+    width: 30px;
+    height: 3px;
+    content: '';
+ 
+    position: relative;
+    left: 4px;
+    bottom: -2px;
+    transform: rotateZ(45deg);
+ 
+
+ 
+   
+
+ }
+ .cruz span:nth-child(2){
+   display: hidden;
+    
+ 
+
+ }
+ .cruz span:nth-child(3){
+    background-color: white;
+    transform: rotateZ(-45deg);
+    width: 30px;
+    height: 3px;
+    position: relative;
+    right: -1px;
+    top: 20px;
+    position: relative;
+ }
+
     
  /*Presentacion*/
  .fondo {
@@ -100,7 +181,7 @@ body {
      text-align: center;
      margin-top: 10px;
      position: relative;
-     top: 40%;
+     top: 50%;
    }
  /*Descripcion*/
  
@@ -117,13 +198,16 @@ body {
     padding-right:2vw ;
   
  }
+ .skillsContainer {
+    width: 100%;
+  
+ }
  .skills {
      color: white;
      height: 100vh;
      text-align: center;
      position: relative;
-     align-items: center;
-     padding: 15vh;
+ 
      font-size: 35px;
  }
  
@@ -131,10 +215,22 @@ body {
  /*Contacto*/
  .redes {
      
-     display: flex;
-     justify-content: flex-end;
-     margin-right: 10%; 
+
+
+    position: fixed;
+    bottom: 0;
+    right: 0;
+
+   display: flex;
+
+
+     margin-right: 8%; 
+
      color: white;
+  
+
+
+     
      
       
  }
@@ -142,13 +238,15 @@ body {
  .redes ul {
      display: flex;
      list-style: none;
-   
-  
-     
+     background-color: black;
+     align-items: center;
+     justify-content: center;
+
     
  }
  .redes li {
      padding: 10%;
+     background-color: black;
  }
  .visually-hidden {
     display: none;
@@ -158,6 +256,8 @@ body {
   
      color:rgb(223, 223, 223);
      margin:0.5vw;
+     list-style: none;
+     
      
  }
  .icons:hover{
@@ -170,9 +270,36 @@ body {
  .portafolio {
      color: white;
      display: flex;
+     height: 100vh;
+     align-items: center;
+     justify-content: center;
      
  }
  
+
+.imagenes {
+ display: grid;
+ grid-template-columns: 40% 40%;
+ justify-content: center;
+
+}
+.imagenes img{
+    flex-basis: 25%;
+    width: 80%;
+    padding: 10px;
+    transition: transform 1s ; 
+    text-align: center;
+    display: flex;
+    align-items: center;
+
+
+    
+}
+.imagenes img:hover {
+   transform: rotateY(360deg);
+}
+
+
  /*logos*/
  .logos {
      list-style: none;
@@ -224,52 +351,164 @@ body {
   
      
    }
- .portafolio {
-     height: 100vh;
-     
- 
- }
- .imagenes {
-  display: grid;
-  grid-template-columns: 40% 40%;
- 
-  padding: 10%;
-  justify-content: center;
- }
- .imagenes img{
-     flex-basis: 25%; /* Cada columna ocupa el 25% del ancho disponible */
-     width: 80%;
-     padding: 10px;
-     transition: transform 1s ease; 
-     text-align: center;
-     display: flex;
-     align-items: center;
- 
-     
- }
- .imagenes img:hover{
-     transform: rotateY(360deg);
+
+
+/*contact*/
+
+.contact {
+    color: white;
+}
+.contact h1 {
+text-align: center;
+margin: 5%;
+}
+.contact-list {
+    display: block;
+
+    text-align: center;
+    list-style: none;
+    list-style-type: none;
+
   
-     
- }
+   
+}
+.contact-list li{
+    padding-bottom:2% ;
+    font-size: 2.5vh;
+    
+}
+.contact-list a {
+    text-decoration: none;
+    
+}
+
  
- .texto {
-     position: absolute;
-     top: 0;
-     left: 0;
-     width: 100%;
-     height: 100%;
-     display: flex;
-     align-items: center;
-     justify-content: center;
-     background-color: rgba(224, 8, 8, 0.7); /* Ajusta el color de fondo y la opacidad */
-     color: white; /* Ajusta el color del texto */
-     font-size: 160px; /* Ajusta el tamaño del texto */
-     transform: rotateY(180deg);
-     opacity: 0;
-     transition: transform 1s ease, opacity 0.5s ease;
-   }
+ 
+@media (max-width:800px) {
+    .name {
+        font-size: 100%;
+    }
+    .descripcion {
+        font-size: 55%;
+    }
+
+
+
+    .job-title {
+        font-size: 80%;
+       
+      }
+
+      .imagenes {
+ 
+        grid-template-columns: 80% 
+      
+       
+       }
+       .navbar {
+        background-color: rgba(8, 8, 8, 0);
+     }
+    
+       .navbar ul {
+        display: flex;
+        flex-direction: column;
+
+        position: relative;
+        background-color:rgba(8, 8, 8, 0.7);   
+        margin: 0px;
+        padding: 0px;
+        width: 40%;
+        transform: translate(-50vw);
+        margin: 0;
+        padding: 0;
+        transition: transform 1s ease;
+        
+
+        
+   
+     
+      }
+      .hidden ul {
+        
+        transition: transform 1s ease;
+        transform: translate(0vw);
+ 
+       
+          
+      }
+
+
+
+
+ 
+    .hamburguer{
+        padding: 0;
+        display: flex;
+        flex-direction: column;
+        cursor: pointer;
+        top: 1vh;
+        z-index: 6;
+        position: absolute;
+        left: 0;
+        
+    
+        width: 25px;
+        height: 25px;
+        
+       
+    
+       
+     
+   
+
    
  
- 
- 
+    
+        
+     }
+  
+   
+   
+     .hamburguer span {
+       
+           
+            transition: transform 0.5s cubic-bezier(0.77,0.2,0.05,1.0),
+            background 0.5s cubic-bezier(0.77,0.2,0.05,1.0),
+            opacity 0.55s ease;
+        
+         
+     }
+     .hamburguer span:first-child{
+        color: white;
+        background-color: white;
+        width: 30px;
+        height: 3px;
+        content: '';
+        margin-bottom: 5px;
+        position: relative;
+     
+       
+    
+     }
+     .hamburguer span:nth-child(2){
+        background-color: white;
+        width: 30px;
+        height: 3px;
+        content: '';
+        margin-bottom: 5px;
+        position: relative;
+        
+     
+    
+     }
+     .hamburguer span:nth-child(3){
+        background-color: white;
+        width: 30px;
+        height: 3px;
+        content: '';
+        margin-bottom: 1px;
+        position: relative;
+     }
+        
+    
+ }
