--- a/src/componentes/style.css
+++ b/src/componentes/style.css
@@ -6,6 +6,10 @@ body {
  html {
      scroll-behavior: smooth;
  }
+ a{
+    text-decoration: none;
+    color: white;
+    }
  /*Navbar*/
  .navbar{
      color: white;
@@ -268,25 +272,27 @@ body {
  }
  /*portafolio*/
  .portafolio {
-     color: white;
+
      display: flex;
      height: 100vh;
      align-items: center;
-     justify-content: center;
-     
+ 
  }
  
 
 .imagenes {
  display: grid;
- grid-template-columns: 40% 40%;
+ grid-template-columns: 50% 50%;
+ gap: 5%;
+ margin: 10%;
  justify-content: center;
 
 }
 .imagenes img{
     flex-basis: 25%;
-    width: 80%;
-    padding: 10px;
+    width: 100%;
+  max-height: 100%;
+  
     transition: transform 1s ; 
     text-align: center;
     display: flex;
@@ -296,7 +302,8 @@ body {
     
 }
 .imagenes img:hover {
-   transform: rotateY(360deg);
+    backface-visibility: hidden; /* Oculta la parte trasera durante la rotación */
+    transition: transform 0.5s;
 }
 
 
@@ -512,3 +519,71 @@ margin: 5%;
         
     
  }
+ /*imagenes,container,back}*/
+ .container{
+    background-color: rgb(47, 0, 255);
+  
+ }
+ /*transision copada **/
+ .card {
+
+max-height: 100%;
+margin: 0px;
+padding: 0px;
+text-align: center;
+
+  
+  
+    position: relative;
+  }
+  
+  .front, .back {
+
+
+    backface-visibility: hidden; /* Oculta la parte trasera durante la rotación */
+    transition: transform 0.5s;
+
+  }
+  
+  .front {
+    transform: rotateY(0deg);
+  }
+  
+  .back {
+    transform: rotateY(180deg);
+position: absolute;
+top: 0;
+width: 100%;
+text-decoration: none;
+list-style: none;
+   text-align: center;
+  }
+
+
+
+  .back ul {
+    display: grid;
+    grid-template-columns: 25% 25% 25% 25%;
+
+    margin: 0;
+    padding: 0;
+
+    list-style: none;
+
+  }
+  .back ul li{
+
+   font-size: 3vw;
+    
+  }
+
+  .card:hover .front {
+    transform: rotateY(-180deg);
+  }
+  
+  .card:hover .back {
+    transform: rotateY(0deg);
+  }
+  
+
+
