--- a/src/componentes/style.css
+++ b/src/componentes/style.css
@@ -319,8 +319,7 @@ body {
      display: flex;
      font-size: 5vw;
    justify-content: center;
-     margin: 0px;
-     padding: 0px;
+
      
  }
  .logos li {
@@ -329,7 +328,7 @@ body {
      width: 25%;
  }
  .logos li p {
-    font-size: 2rem;
+    font-size: 1.5rem;
     color: white;
 
  }
@@ -404,7 +403,7 @@ margin-bottom: 5%;
 
  
  
-@media (max-width:800px) {
+@media (max-width:768px) {
     .name {
         font-size: 100%;
     }
@@ -470,20 +469,8 @@ margin-bottom: 5%;
         z-index: 6;
         position: absolute;
         left: 0;
-        
-    
         width: 25px;
         height: 25px;
-        
-       
-    
-       
-     
-   
-
-   
- 
-    
         
      }
   
@@ -529,9 +516,18 @@ margin-bottom: 5%;
         margin-bottom: 1px;
         position: relative;
      }
-        
-    
+     .logos li p {
+      font-size: 1rem;
+     
+  
+   }
+ 
  }
+
+
+
+
+
  /*imagenes,container,back}*/
  .container{
     background-color: rgb(47, 0, 255);
@@ -567,23 +563,32 @@ text-align: center;
 position: absolute;
 top: 0;
 text-decoration: none;
-list-style: none;
-   text-align: center;
+list-style: none;grid-template-columns: repeat(auto-fit,min-max(2000px,1fr));
+gap: 10px;
+
+
+
+
+
   }
 
 .back ul {
   display: flex;
   list-style: none;
+  font-size: 0.7rem;
+
+
+
 
 }
+
 .back img {
   width: 50%;
+margin: auto;
 }
-.back p {
-  width: 50%;
-  font-weight: 500;
+.back h1 {
+  font-size: 15px;
 }
-
 
 
   .card:hover .front {
